--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ li{
   height: 600px;
   padding: 40px 20px 40px 20px;
   color: #a9a9a9;
-  background-image: url("AnyConv.com__AdobeStock_245382089_Preview.png");
+  background-image: url("/AnyConv.com__AdobeStock_245382089_Preview.png");
   background-size: cover;
   text-align: center;
 }
