--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,11 @@
+* {
+  box-sizing:border-box;
+}
+
+.clear {
+  clear: left;
+}
+
 body {
   font-family: "Avenir Next";
 }
@@ -15,18 +23,26 @@ li{
   z-index: 10;
 }
 
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
+}
+
 .main {
-  height: 600px;
+  height: 700px;
   padding: 40px 20px 40px 20px;
   color: #a9a9a9;
-  background-image: url("AnyConv.com__AdobeStock_245382089_Preview.png");
+  background-image: url("./pictures/AnyConv.com__AdobeStock_245382089_Preview.png");
   background-size: cover;
   text-align: center;
 }
 
 .footer {
   background-color:  #2f5167;
-  height: 120px;
+  height: 180px;
   color: #fff;
   padding:40px;
 }
@@ -43,6 +59,7 @@ li{
   color:white;
   padding:0 20px 20px 20px;
 }
+
 
 
 .footer-logo{
@@ -154,7 +171,6 @@ a{
 
 .header-login{
   color: white;
-  display: block;
   float:right;
   margin:0 30px 0 0;
 }
